# csv-processor

./: .env.example  README.md  pyproject.toml  start_app.sh
app/: crud.py  database.py  main.py  models.py  router.py  tasks.py
app/utils/: aws.py  csv_validator.py  image_processing.py  webhook.py
script/: start_celery.sh  start_server.sh
