[tool.poetry]
name = "csv-processor"
version = "0.1.0"
description = ""
authors = ["Rohit Kumar <kumar1rohit@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
boto3 = "^1.34.146"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
